--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -15,11 +15,19 @@
 
 }
 
+.gpt3__blog-container_article-bigImage img {
+  width: 100%;
+  height: 100%;
+
+  max-height: 400px;
+  object-fit: cover;
+}
+
 .gpt3__blog-container_article-image img {
   width: 100%;
   height: 100%;
 
-  max-height: 300px;
+  max-height: 150px;
   object-fit: cover;
 }
 
@@ -60,10 +68,10 @@
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
-  line-height: 15px;
+  line-height: 22px;
 
   color: var(--color-text);
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .gpt3__blog-container_article-content p:last-child {
