--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -1,4 +1,4 @@
-.gpt3__brand {
+.ugport__brand {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.gpt3__brand div {
+.ugport__brand div {
   flex: 1;
   max-width: 150px;
   min-width: 120px;
@@ -18,7 +18,7 @@
   align-items: center;
 }
 
-.gpt3__brand div a img {
+.ugport__brand div a img {
   height: 2rem;
 }
 
