--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,16 +1,16 @@
-.gpt3__blog {
+.ugport__blog {
   display: flex;
   flex-direction: column;
 }
 
-.gpt3__blog-heading {
+.ugport__blog-heading {
   width: 80%;
   text-align: left;
 
   margin-bottom: 5rem;
 }
 
-.gpt3__blog-heading h1 {
+.ugport__blog-heading h1 {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 800;
@@ -20,17 +20,17 @@
   letter-spacing: -0.04em;
 }
 
-.gpt3__blog-container {
+.ugport__blog-container {
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__blog-container_groupA {
+.ugport__blog-container_groupA {
   flex: 0.75;
   margin-right: 2rem;
 }
 
-.gpt3__blog-container_groupB {
+.ugport__blog-container_groupB {
   flex: 1;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -38,38 +38,38 @@
 }
 
 @media screen and (max-width: 990px) {
-  .gpt3__blog-container {
+  .ugport__blog-container {
     flex-direction: column;
   }
 
-  .gpt3__blog-container_groupA {
+  .ugport__blog-container_groupA {
     flex: 1;
     margin: 2rem 0;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .gpt3__blog-container_groupB {
+  .ugport__blog-container_groupB {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .gpt3__blog-container_groupA .gpt3__blog-container_article {
+  .ugport__blog-container_groupA .ugport__blog-container_article {
     width:100%
   }
 
-  .gpt3__blog-heading h1 {
+  .ugport__blog-heading h1 {
     font-size: 46px;
     line-height: 52px;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .gpt3__blog-heading h1 {
+  .ugport__blog-heading h1 {
     font-size: 40px;
     line-height: 52px;
   }
 
-  .gpt3__blog-heading {
+  .ugport__blog-heading {
     margin-bottom: 1rem;
   }
 }
