--- a/src/containers/footer/footer.css
+++ b/src/containers/footer/footer.css
@@ -1,4 +1,4 @@
-.gpt3__footer {
+.ugport__footer {
   display: flex;
   background: var(--color-footer);
 
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.gpt3__footer-heading {
+.ugport__footer-heading {
   width: 100%;
   text-align: center;
   
@@ -15,7 +15,7 @@
   padding: 0 10%;
 }
 
-.gpt3__footer-heading h1 {
+.ugport__footer-heading h1 {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 800;
@@ -26,7 +26,7 @@
   letter-spacing: -0.04em;
 }
 
-.gpt3__footer-button {
+.ugport__footer-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,11 +35,11 @@
   padding: 1rem;
   border: 1px solid #FFFFFF;
 
-  margin-bottom: 10rem;
+  margin-bottom: 2rem;
   cursor: pointer;
 }
 
-.gpt3__footer-button p {
+.ugport__footer-button p {
 
   font-family: var(--font-family);
   font-size: 18px;
@@ -49,7 +49,7 @@
   word-spacing: 2px;
 }
 
-.gpt3__footer-links {
+.ugport__footer-links {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -60,23 +60,23 @@
   text-align: left;
 }
 
-.gpt3__footer-links div {
+.ugport__footer-links div {
   width: 250px;
   margin: 1rem;
 }
 
-.gpt3__footer-links_logo {
+.ugport__footer-links_logo {
   display: flex;
   flex-direction: column;
 }
 
-.gpt3__footer-links_logo img {
+.ugport__footer-links_logo img {
   max-width: 150px;
   object-fit: cover;
   margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_logo p {
+.ugport__footer-links_logo p {
   font-family: var(--font-family);
   font-size: 12px;
   line-height: 14px;
@@ -84,13 +84,13 @@
   color: #FFFFFF;
 }
 
-.gpt3__footer-links_div {
+.ugport__footer-links_div {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
 }
 
-.gpt3__footer-links_div h4 {
+.ugport__footer-links_div h4 {
   font-family: var(--font-family);
   font-size: 14px;
   line-height: 16px;
@@ -99,7 +99,7 @@
   margin-bottom: 1rem;
 }
 
-.gpt3__footer-links_div p {
+.ugport__footer-links_div p {
   font-family: var(--font-family);
   font-size: 12px;
   line-height: 14px;
@@ -109,13 +109,13 @@
   cursor: pointer;
 }
 
-.gpt3__footer-copyright {
+.ugport__footer-copyright {
   margin-top: 2rem;
   text-align: center;
   width: 100%;
 }
 
-.gpt3__footer-copyright p {
+.ugport__footer-copyright p {
   font-family: var(--font-family);
   font-size: 12px;
   line-height: 14px;
@@ -125,30 +125,30 @@
 }
 
 @media screen and (max-width: 850px) {
-  .gpt3__footer-heading h1 {
+  .ugport__footer-heading h1 {
     font-size: 44px;
     line-height: 50px;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .gpt3__footer-heading h1 {
+  .ugport__footer-heading h1 {
     font-size: 34px;
     line-height: 42px;
   }
 
-  .gpt3__footer-links div {
+  .ugport__footer-links div {
     margin: 1rem 0;
   }
 
-  .gpt3__footer-button p {
+  .ugport__footer-button p {
     font-size: 14px;
     line-height: 20px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .gpt3__footer-heading h1 {
+  .ugport__footer-heading h1 {
     font-size: 27px;
     line-height: 38px;
   }
