--- a/src/containers/showCase1/showCase1.css
+++ b/src/containers/showCase1/showCase1.css
@@ -1,9 +1,9 @@
-.gpt3__possibility {
+.ugport__showCase1 {
   display: flex;
   flex-direction: row;
 }
 
-.gpt3__possibility-image {
+.ugport__showCase1-image {
   flex: 1;
   display: flex;
   justify-content: flex-start;
@@ -12,12 +12,12 @@
   margin-right: 2rem;
 }
 
-.gpt3__possibility-image img {
+.ugport__showCase1-image img {
   width: 100%;
   height: 100%;
 }
 
-.gpt3__possibility-content {
+.ugport__showCase1-content {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -25,7 +25,7 @@
   align-items: flex-start;
 }
 
-.gpt3__possibility-content h4 {
+.ugport__showCase1-content h4 {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 500;
@@ -35,7 +35,7 @@
   color: #71E5FF;
 }
 
-.gpt3__possibility-content h4:last-child {
+.ugport__showCase1-content h4:last-child {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 500;
@@ -45,7 +45,7 @@
   color: #FF8A71;
 }
 
-.gpt3__possibility-content h1 {
+.ugport__showCase1-content h1 {
   margin: 1rem 0;
 
   font-family: var(--font-family);
@@ -55,7 +55,7 @@
   line-height: 45px;
 }
 
-.gpt3__possibility-content p {
+.ugport__showCase1-content p {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 400;
@@ -68,15 +68,15 @@
 }
 
 @media screen and (max-width: 950px) {
-  .gpt3__possibility {
+  .ugport__showCase1 {
     flex-direction: column;
   }
 
-  .gpt3__possibility-image {
+  .ugport__showCase1-image {
     margin: 1rem 0;
   }
 
-  .gpt3__possibility-content {
+  .ugport__showCase1-content {
     margin-top: 2rem;
   }
 }
