--- a/src/containers/smallSkills/smallSkills.css
+++ b/src/containers/smallSkills/smallSkills.css
@@ -1,11 +1,11 @@
-.gpt3__features {
+.ugport__smallSkills {
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
 
-.gpt3__features-headings {
+.ugport__smallSkills-headings {
   flex: 1;
   display: flex;
   justify-content: flex-start;
@@ -16,14 +16,14 @@
   margin-right: 5rem;
 }
 
-.gpt3__features-headings h1 {
+.ugport__smallSkills-headings h1 {
   font-family: var(--font-family);
   font-weight: 800;
   font-size: 34px;
   line-height: 45px;
 }
 
-.gpt3__features-headings p {
+.ugport__smallSkills-headings p {
   font-family: var(--font-family);
   font-style: normal;
   font-weight: 500;
@@ -34,7 +34,7 @@
   margin-top: 2rem;
 }
 
-.gpt3__features-container {
+.ugport__smallSkills-container {
   flex: 1.5;
   display: flex;
   justify-content: flex-start;
@@ -43,17 +43,17 @@
 }
 
 @media screen and (max-width: 990px) {
-  .gpt3__features {
+  .ugport__features {
     flex-direction: column;
   }
 
-  .gpt3__features-heading {
+  .ugport__features-heading {
     margin: 0 0 2rem 0;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .gpt3__features-heading h1 {
+  .ugport__features-heading h1 {
     font-size: 28px;
     line-height: 38px;
   }
