--- a/src/components/brand-small/brand-small.css
+++ b/src/components/brand-small/brand-small.css
@@ -9,7 +9,7 @@
   flex: 1;
   max-width: 150px;
   min-width: 30px;
-  margin: 0.5rem;
+  margin: 0.2rem;
 
   display: flex;
   justify-content: center;
@@ -22,4 +22,10 @@
 
 .brand__padding {
   padding: 0.5rem 2rem;
+}
+
+@media screen and (max-width: 550px) {
+  .ugport__brand-small div {
+    min-width: 10px;
+  }
 }
