--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -10,7 +10,7 @@
 .ugport__brand div {
   flex: 1;
   max-width: 150px;
-  min-width: 120px;
+  min-width: 80px;
   margin: 0.1rem;
 
   display: flex;
@@ -24,4 +24,14 @@
 
 .brand__padding {
   padding: 2rem 2rem;
+}
+
+@media screen and (max-width: 650px) {
+  .ugport__brand div a img {
+    height: 1.5rem;
+  }
+
+  .ugport__brand div {
+    min-width: 70px;
+  }
 }
