--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -54,7 +54,9 @@
 
 .ugport__header-image img {
   width: 90%;
-  height: 100%;
+  height: 90%;
+
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1050px) {
